--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,1 +1,62 @@
+.timeline-brief {
+  margin-top: 40px;
+}
 
+.timeline-brief h1 {
+  font-size: 28px;
+  margin-bottom: 25px;
+  font-weight: 600;
+}
+
+.timeline-body {
+  border-left: 3px solid #d9d9d9;
+  padding-left: 25px;
+  margin-left: 10px;
+}
+
+.timeline-item {
+  margin-bottom: 35px;
+  position: relative;
+}
+
+.timeline-item::before {
+  content: "";
+  width: 14px;
+  height: 14px;
+  background: #0066cc;   /* academicpages 的默认蓝色 */
+  border-radius: 50%;
+  position: absolute;
+  left: -32px;
+  top: 5px;
+}
+
+.timeline-date {
+  font-size: 14px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  margin-bottom: 6px;
+}
+
+.timeline-date img.social-icon {
+  width: 22px;
+  height: 22px;
+  border-radius: 4px;
+  margin-right: 6px;
+}
+
+.timeline-title {
+  font-size: 17px;
+  font-weight: 600;
+  margin-bottom: 4px;
+}
+
+.timeline-desc {
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.timeline-host {
+  font-size: 13px;
+  color: #555;
+}
