--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,41 +1,47 @@
+/* Timeline container */
 .timeline-brief {
   margin-top: 40px;
 }
 
+/* Timeline title */
 .timeline-brief h1 {
   font-size: 28px;
-  margin-bottom: 25px;
-  font-weight: 600;
+  margin-bottom: 30px;
+  padding-left: 5px;
 }
 
+/* Timeline body */
 .timeline-body {
-  border-left: 3px solid #d9d9d9;
+  border-left: 3px solid #d0d0d0;
   padding-left: 25px;
   margin-left: 10px;
 }
 
+/* Each item */
 .timeline-item {
   margin-bottom: 35px;
   position: relative;
 }
 
+/* Dot on the line */
 .timeline-item::before {
   content: "";
   width: 14px;
   height: 14px;
-  background: #0066cc;   /* academicpages 的默认蓝色 */
+  background: #4e9fff;
   border-radius: 50%;
   position: absolute;
   left: -32px;
   top: 5px;
 }
 
+/* Date + logo */
 .timeline-date {
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 600;
+  margin-bottom: 6px;
   display: flex;
   align-items: center;
-  margin-bottom: 6px;
 }
 
 .timeline-date img.social-icon {
@@ -45,18 +51,21 @@
   margin-right: 6px;
 }
 
+/* Title */
 .timeline-title {
-  font-size: 17px;
+  font-size: 18px;
   font-weight: 600;
   margin-bottom: 4px;
 }
 
+/* Description */
 .timeline-desc {
-  font-size: 14px;
+  font-size: 15px;
   line-height: 1.5;
+  margin-bottom: 10px;
 }
 
 .timeline-host {
-  font-size: 13px;
   color: #555;
+  font-size: 14px;
 }
