--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,71 +1,188 @@
 /* Timeline container */
-.timeline-brief {
-  margin-top: 40px;
+.timeline-brief,
+.timeline {
+    font-family: 'Roboto', sans-serif, Helvetica;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 20px;
+    font-weight: 400
 }
 
-/* Timeline title */
-.timeline-brief h1 {
-  font-size: 28px;
-  margin-bottom: 30px;
-  padding-left: 5px;
-}
-
-/* Timeline body */
 .timeline-body {
-  border-left: 3px solid #d0d0d0;
-  padding-left: 25px;
-  margin-left: 10px;
+    padding: 0
 }
 
-/* Each item */
+.timeline-start {
+    width: -webkit-calc(100% - 2 * (20px));
+    width: calc(100% - 2 * (20px));
+    text-align: center;
+    padding: 20px
+}
+
+.timeline-item:before {
+    width: 11px;
+    height: 11px;
+    background: #333;
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 5px
+}
+
 .timeline-item {
-  margin-bottom: 35px;
-  position: relative;
+    width: -webkit-calc(50% - (20px));
+    width: calc(50% - (20px));
+    position: relative
 }
 
-/* Dot on the line */
-.timeline-item::before {
-  content: "";
-  width: 14px;
-  height: 14px;
-  background: #4e9fff;
-  border-radius: 50%;
-  position: absolute;
-  left: -32px;
-  top: 5px;
+.timeline-item:nth-child(odd):before {
+    left: -8px
 }
 
-/* Date + logo */
+.timeline-item:nth-child(odd):after {
+    left: -8px;
+    bottom: 0
+}
+
+.timeline-item:nth-child(odd) {
+    margin-left: 50%;
+    padding-left: 20px;
+    border-left: 5px solid #333;
+    text-align: left
+}
+
+.timeline-item:nth-child(even) {
+    margin-right: -webkit-calc(50% + (20px));
+    margin-right: calc(50% + (20px));
+    padding-right: 20px;
+    border-right: 5px solid #333;
+    text-align: right
+}
+
+.timeline-item:nth-child(even):before {
+    right: -8px
+}
+
+.timeline-item:nth-child(even):after {
+    right: -8px
+}
+
 .timeline-date {
-  font-size: 15px;
-  font-weight: 600;
-  margin-bottom: 6px;
-  display: flex;
-  align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    color: #113f7c
 }
 
-.timeline-date img.social-icon {
-  width: 22px;
-  height: 22px;
-  border-radius: 4px;
-  margin-right: 6px;
-}
-
-/* Title */
 .timeline-title {
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 4px;
+    font-size: 20px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    color: #9b3022
 }
 
-/* Description */
 .timeline-desc {
-  font-size: 15px;
-  line-height: 1.5;
-  margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 200
 }
 
 .timeline-host {
-  color: #555;
-  font-size: 14px;
+    font-size: 14px;
+    font-weight: 400
+}
+
+.timeline>.timeline-body>.timeline-item:last-child:after {
+    bottom: 0;
+    width: 11px;
+    height: 11px;
+    background: #333;
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 5px
+}
+
+.timeline>.timeline-body>.timeline-item:last-child:nth-child(even) {
+    vertical-align: middle;
+    min-height: 200px;
+    border-right: 5px dashed #333
+}
+
+.timeline>.timeline-body>.timeline-item:last-child:nth-child(odd) {
+    vertical-align: middle;
+    min-height: 200px;
+    border-left: 5px dashed #333
+}
+
+@media screen and (max-width: 600px) {
+    .timeline-start {
+        min-height: 50px;
+        padding: 0 0 0 5px;
+        text-align: left;
+        border-left: 5px dashed #333;
+        width: 100%;
+        padding-left: 5px;
+        margin-left: 5px
+    }
+
+    .timeline-start:after {
+        left: 17px;
+        width: 11px;
+        height: 11px;
+        background: #333;
+        content: "";
+        display: block;
+        position: absolute;
+        border-radius: 5px
+    }
+
+    .timeline-item,
+    .timeline-item:nth-child(odd),
+    .timeline-item:nth-child(even) {
+        min-height: 0;
+        text-align: left;
+        border-left: 5px solid #333;
+        border-right: 0px;
+        width: 100%;
+        padding-left: 5px;
+        margin-left: 5px;
+        margin-right: 0px;
+        padding-right: 0px
+    }
+
+    .timeline>.timeline-body>.timeline-item:last-child:nth-child(odd),
+    .timeline>.timeline-body>.timeline-item:last-child:nth-child(even) {
+        min-height: 0;
+        text-align: left;
+        border-left: 5px solid #333;
+        border-right: 0px;
+        width: 100%;
+        padding-left: 5px;
+        margin-left: 5px;
+        margin-right: 0px;
+        padding-right: 0px
+    }
+
+    .timeline-item:before {
+        left: -8px
+    }
+
+    .timeline-item:after {
+        left: -8px
+    }
+
+    .timeline-date {
+        font-size: 14px
+    }
+
+    .timeline-title {
+        font-size: 16px
+    }
+
+    .timeline-desc {
+        font-size: 12px
+    }
+
+    .timeline-host {
+        font-size: 10px
+    }
 }
